--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "mosaic",
   "version": "1.0.0",
-  "description": "Productivity app",
+  "description": "Voice-enabled productivity app with colorful interface",
   "main": "dist-electron/main.js",
   "scripts": {
     "dev": "vite",
@@ -24,32 +24,44 @@
   "author": "Ellie",
   "license": "MIT",
   "dependencies": {
-    "@prisma/client": "^7.0.1",
+    "@prisma/client": "^6.0.0",
     "date-fns": "^4.1.0",
-    "framer-motion": "^12.23.25",
-    "lucide-react": "^0.555.0",
-    "react": "^19.2.0",
-    "react-big-calendar": "^1.19.4",
-    "react-datepicker": "^8.10.0",
-    "react-dom": "^19.2.0",
-    "zod": "^4.1.13"
+    "framer-motion": "^11.11.17",
+    "lucide-react": "^0.460.0",
+    "react": "^18.3.1",
+    "react-big-calendar": "^1.15.0",
+    "react-datepicker": "^7.5.0",
+    "react-dom": "^18.3.1",
+    "vosk-browser": "^0.0.8",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
-    "@tailwindcss/postcss": "^4.1.17",
-    "@types/react": "^19.2.7",
-    "@types/react-big-calendar": "^1.16.3",
-    "@types/react-datepicker": "^6.2.0",
-    "@types/react-dom": "^19.2.3",
-    "@vitejs/plugin-react": "^5.1.1",
-    "autoprefixer": "^10.4.22",
-    "electron": "^39.2.4",
-    "electron-builder": "^26.0.12",
-    "postcss": "^8.5.6",
-    "prisma": "^7.0.1",
-    "tailwindcss": "^4.1.17",
-    "typescript": "^5.9.3",
-    "vite": "^7.2.6",
-    "vite-plugin-electron": "^0.29.0",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.0.1",
+    "@testing-library/user-event": "^14.5.2",
+    "@types/jest": "^29.5.14",
+    "@types/react": "^18.3.12",
+    "@types/react-big-calendar": "^1.8.12",
+    "@types/react-datepicker": "^7.0.0",
+    "@types/react-dom": "^18.3.1",
+    "@typescript-eslint/eslint-plugin": "^8.15.0",
+    "@typescript-eslint/parser": "^8.15.0",
+    "@vitejs/plugin-react": "^4.3.3",
+    "autoprefixer": "^10.4.20",
+    "electron": "^33.2.0",
+    "electron-builder": "^25.1.8",
+    "eslint": "^9.15.0",
+    "eslint-plugin-react": "^7.37.2",
+    "eslint-plugin-react-hooks": "^5.0.0",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
+    "postcss": "^8.4.49",
+    "prisma": "^6.0.0",
+    "tailwindcss": "^3.4.15",
+    "ts-jest": "^29.2.5",
+    "typescript": "^5.6.3",
+    "vite": "^5.4.11",
+    "vite-plugin-electron": "^0.28.8",
     "vite-plugin-electron-renderer": "^0.14.6"
   },
   "build": {
