--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "mosaic",
   "version": "1.0.0",
-  "description": "Voice-enabled productivity app with colorful interface",
-  "main": "dist-electron/main.js",
+  "description": "productivity app",
+  "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "tsc && vite build && electron-builder",
+    "build": "vite build",
     "preview": "vite preview",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "test": "jest",
@@ -15,14 +15,13 @@
     "prisma:studio": "prisma studio"
   },
   "keywords": [
-    "electron",
     "react",
     "typescript",
     "productivity",
-    "voice"
+    "voice",
+    "pwa"
   ],
   "author": "Ellie",
-  "license": "MIT",
   "dependencies": {
     "@prisma/client": "^6.0.0",
     "date-fns": "^4.1.0",
@@ -32,7 +31,6 @@
     "react-big-calendar": "^1.15.0",
     "react-datepicker": "^7.5.0",
     "react-dom": "^18.3.1",
-    "vosk-browser": "^0.0.8",
     "zod": "^3.23.8"
   },
   "devDependencies": {
@@ -48,8 +46,6 @@
     "@typescript-eslint/parser": "^8.15.0",
     "@vitejs/plugin-react": "^4.3.3",
     "autoprefixer": "^10.4.20",
-    "electron": "^33.2.0",
-    "electron-builder": "^25.1.8",
     "eslint": "^9.15.0",
     "eslint-plugin-react": "^7.37.2",
     "eslint-plugin-react-hooks": "^5.0.0",
@@ -60,34 +56,6 @@
     "tailwindcss": "^3.4.15",
     "ts-jest": "^29.2.5",
     "typescript": "^5.6.3",
-    "vite": "^5.4.11",
-    "vite-plugin-electron": "^0.28.8",
-    "vite-plugin-electron-renderer": "^0.14.6"
-  },
-  "build": {
-    "appId": "com.mosaic.app",
-    "productName": "Mosaic",
-    "directories": {
-      "output": "release"
-    },
-    "files": [
-      "dist/**/*",
-      "dist-electron/**/*"
-    ],
-    "win": {
-      "target": [
-        "nsis"
-      ]
-    },
-    "mac": {
-      "target": [
-        "dmg"
-      ]
-    },
-    "linux": {
-      "target": [
-        "AppImage"
-      ]
-    }
+    "vite": "^5.4.11"
   }
 }
