--- a/package.json
+++ b/package.json
@@ -5,8 +5,12 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
+    "dev:server": "tsx watch src/Server/server.ts",
+    "dev:all": "concurrently \"npm run dev\" \"npm run dev:server\"",
     "build": "vite build",
+    "build:server": "tsc --project tsconfig.server.json",
     "preview": "vite preview",
+    "start:server": "node dist/server/server.js",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "test": "jest",
     "test:watch": "jest --watch",
@@ -24,28 +28,39 @@
   "author": "Ellie",
   "dependencies": {
     "@prisma/client": "^6.0.0",
+    "cors": "^2.8.5",
     "date-fns": "^4.1.0",
+    "express": "^5.2.1",
     "framer-motion": "^11.11.17",
+    "helmet": "^8.1.0",
     "lucide-react": "^0.460.0",
     "react": "^18.3.1",
     "react-big-calendar": "^1.15.0",
     "react-datepicker": "^7.5.0",
     "react-dom": "^18.3.1",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1",
     "zod": "^3.23.8"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.0.1",
     "@testing-library/user-event": "^14.5.2",
+    "@types/cors": "^2.8.19",
+    "@types/express": "^5.0.6",
+    "@types/helmet": "^0.0.48",
     "@types/jest": "^29.5.14",
     "@types/react": "^18.3.12",
     "@types/react-big-calendar": "^1.8.12",
     "@types/react-datepicker": "^7.0.0",
     "@types/react-dom": "^18.3.1",
+    "@types/swagger-jsdoc": "^6.0.4",
+    "@types/swagger-ui-express": "^4.1.8",
     "@typescript-eslint/eslint-plugin": "^8.15.0",
     "@typescript-eslint/parser": "^8.15.0",
     "@vitejs/plugin-react": "^4.3.3",
     "autoprefixer": "^10.4.20",
+    "concurrently": "^9.2.1",
     "eslint": "^9.15.0",
     "eslint-plugin-react": "^7.37.2",
     "eslint-plugin-react-hooks": "^5.0.0",
@@ -55,6 +70,7 @@
     "prisma": "^6.0.0",
     "tailwindcss": "^3.4.15",
     "ts-jest": "^29.2.5",
+    "tsx": "^4.21.0",
     "typescript": "^5.6.3",
     "vite": "^5.4.11"
   }
