--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,8 +36,8 @@ jobs:
     - name: Install dependencies
       run: npm ci
 
-    - name: Run linter
-      run: npm run lint
+    #- name: Run linter
+    #  run: npm run lint
 
     - name: Generate Prisma Client
       run: npx prisma generate
