--- a/tsconfig.server.json
+++ b/tsconfig.server.json
@@ -5,7 +5,8 @@
     "moduleResolution": "NodeNext",
     "outDir": "./dist/server",
     "rootDir": "./src/Server",
-    "noEmit": false
+    "noEmit": false,
+    "allowImportingTsExtensions": false,
   },
   "include": ["src/Server/**/*"],
   "exclude": ["node_modules", "dist"]
